<resources>
    <string name="app_name">AndroidLevel1</string>
    <string name="hello_world">Привет, мир!</string>
    <string name="new_text">New text</string>
    <string name="button">Button</string>
    <string name="aSwitch">Switch</string>
    <string name="checkbox">CheckBox</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="i_am_second_activity">I am second activity</string>
    <string name="backToMainActivity">BackToMainActivity</string>
    <string name="write_here">write_here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="text1">Text1</string>
    <string name="phone">Phone</string>
    <string name="textview">TextView</string>
    <string name="togglebutton">ToggleButton</string>

</resources>