<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2C2C"
    tools:context=".MainActivity">
    <!-- tools: Для превью.
     wrap_content - расстянуть контейнер по содержимому.
     0dp аналог match_parent (для constraint layout)
     android:gravity 0.5 расположени по центру
     dp - пиксели независимые от плотности
     sp - dp для шрифта
     in(mm) дюйм(мм)
     app:layout_constraintHorizontal_bias="0.5" расположение отн-но ширины экрана
     app:layout_constraintStart_toStartOf="@+id/textView" привязка к textview
     -->
    <!-- android:src="@drawable/ic_twotone_directions_boat_24"/>
    -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="640dp"
        android:src="@drawable/ic_twotone_directions_boat_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="4dp"
        android:text="@string/aSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/changeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="Открыть вторую страницу"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="207dp" />

    <org.naishadhparmar.zcustomcalendar.CustomCalendar
        android:id="@+id/custom_calendar"
        android:layout_width="351dp"
        android:layout_height="263dp"
        android:layout_marginStart="28dp"

        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="164dp"
        android:layout_marginTop="40dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/switchButton"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
